--- a/index.html
+++ b/index.html
@@ -26,79 +26,80 @@
     <header class="jumbotron">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <span class="font-weight-bold" id="currentDate"></span>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
       <div class="row time-block">
         <!--9AM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">9AM</div>
-        <div class="col-9 bg-light" id="9-am">
-          <p id="taskItem-0"></p>
+        <div class="col-9 bg-light taskContainer" id="9-am">
+          <p id="taskItem-0">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
       </div>
       <div class="row time-block">
         <!--10AM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">10AM</div>
-        <div class="col-9 bg-light" id="10-am">
-          <p id="taskItem-1"></p>
+        <div class="col-9 bg-light taskContainer" id="10-am">
+          <p id="taskItem-1">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
       </div>
       <div class="row time-block">
         <!--11AM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">11AM</div>
-        <div class="col-9 bg-light" id="11-am">
-          <p id="taskItem-2"></p>
+        <div class="col-9 bg-light taskContainer" id="11-am">
+          <p id="taskItem-2">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
       </div>
       <div class="row time-block">
         <!--12PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">12PM</div>
-        <div class="col-9 bg-light" id="12-pm">
-          <p id="taskItem-3"></p>
+        <div class="col-9 bg-light taskContainer" id="12-pm">
+          <p id="taskItem-3">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
       </div>
       <div class="row time-block">
         <!--1PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">1PM</div>
-        <div class="col-9 bg-light" id="1-pm">
-          <p id="taskItem-4"></p>
+        <div class="col-9 bg-light taskContainer" id="1-pm">
+          <p id="taskItem-4">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
       </div>
       <div class="row time-block">
         <!--2PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">2PM</div>
-        <div class="col-9 bg-light" id="2-pm">
-          <p id="taskItem-5"></p>
+        <div class="col-9 bg-light taskContainer" id="2-pm">
+          <p id="taskItem-5">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
       </div>
       <div class="row time-block">
         <!--3PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">3PM</div>
-        <div class="col-9 bg-light" id="3-pm">
-          <p id="taskItem-6"></p>
+        <div class="col-9 bg-light taskContainer" id="3-pm">
+          <p id="taskItem-6">Available</p>
+          
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
       </div>
       <div class="row time-block">
         <!--4PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">4PM</div>
-        <div class="col-9 bg-light" id="4-pm">
-          <p id="taskItem-7"></p>
+        <div class="col-9 bg-light taskContainer" id="4-pm">
+          <p id="taskItem-7">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
       </div>
       <div class="row time-block">
         <!--5PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">5PM</div>
-        <div class="col-9 bg-light" id="5-pm">
-          <p id="taskItem-8"></p>
+        <div class="col-9 bg-light taskContainer" id="5-pm">
+          <p id="taskItem-8">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
 
@@ -107,6 +108,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="./main.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
