all functions added and working

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="row time-block">
         <!--9AM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">9AM</div>
-        <div class="col-9 bg-light taskContainer" id="task-9">
+        <div class="col-9 taskContainer" id="task-9">
           <p id="taskItem-0">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
@@ -41,7 +41,7 @@
       <div class="row time-block">
         <!--10AM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">10AM</div>
-        <div class="col-9 bg-light taskContainer" id="task-10">
+        <div class="col-9 taskContainer" id="task-10">
           <p id="taskItem-1">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
@@ -49,7 +49,7 @@
       <div class="row time-block">
         <!--11AM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">11AM</div>
-        <div class="col-9 bg-light taskContainer" id="task-11">
+        <div class="col-9 taskContainer" id="task-11">
           <p id="taskItem-2">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
@@ -57,7 +57,7 @@
       <div class="row time-block">
         <!--12PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">12PM</div>
-        <div class="col-9 bg-light taskContainer" id="task-12">
+        <div class="col-9 taskContainer" id="task-12">
           <p id="taskItem-3">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
@@ -65,7 +65,7 @@
       <div class="row time-block">
         <!--1PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">1PM</div>
-        <div class="col-9 bg-light taskContainer" id="task-13">
+        <div class="col-9 taskContainer" id="task-13">
           <p id="taskItem-4">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
@@ -73,7 +73,7 @@
       <div class="row time-block">
         <!--2PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">2PM</div>
-        <div class="col-9 bg-light taskContainer" id="task-14">
+        <div class="col-9 taskContainer" id="task-14">
           <p id="taskItem-5">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
@@ -81,7 +81,7 @@
       <div class="row time-block">
         <!--3PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">3PM</div>
-        <div class="col-9 bg-light taskContainer" id="task-15">
+        <div class="col-9 taskContainer" id="task-15">
           <p id="taskItem-6">Available</p>
           
         </div>
@@ -90,7 +90,7 @@
       <div class="row time-block">
         <!--4PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">4PM</div>
-        <div class="col-9 bg-light taskContainer" id="task-16">
+        <div class="col-9 taskContainer" id="task-16">
           <p id="taskItem-7">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
@@ -98,7 +98,7 @@
       <div class="row time-block">
         <!--5PM-->
         <div class="col-2 hour d-flex align-items-center justify-content-end">5PM</div>
-        <div class="col-9 bg-light taskContainer" id="task-17">
+        <div class="col-9 taskContainer" id="task-17">
           <p id="taskItem-8">Available</p>
         </div>
         <button class="col-1 rounded saveBtn"><i>Save</i></button>
